...
    const val ORDERS_LAZY_COLUMN: String = "Orders lazy column"
    const val ORDERS_TOP_BAR: String = "Orders top bar"
    const val SORT_BTN: String = "Sort button"
    const val EXPAND_OR_COLLAPSE_BTN: String = "Expand or collapse button"
    const val ORDERS_SORT_SECTION: String = "Orders sort section"
    const val ORDERS_CPI: String = "Orders circular progress indicator"
    const val PROFILE_CONTENT: String = "Profile content"
    const val PROFILE_COLUMN: String = "Profile column"
    const val PROFILE_TOP_BAR: String = "Profile top bar"
    const val PROFILE_FIRSTNAME_TF: String = "Profile first name tf"
    const val PROFILE_LASTNAME_TF: String = "Profile last name tf"
    const val PROFILE_STREET_TF: String = "Profile street tf"
    const val PROFILE_CITY_TF: String = "Profile city tf"
    const val PROFILE_ZIP_CODE_TF: String = "Profile zip code tf"
    const val PROFILE_CPI: String = "Profile circular progress indicator"
    const val SAVE_BTN: String = "Save button"

    //Content Description
    const val CART_BTN: String = "Cart button"
    const val SORT_AND_FILTER_BTN: String = "Sort and filter button"
    const val FAVOURITES_BTN: String = "Favourite button"
    const val IMAGE: String = "Image"
...
